# lunch

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setup.cgf  setup.py
.beads/: metadata.json
app/: app.py
ci/: build.sh  build_protos.sh  deploy_conda.sh  doc.sh  lint.sh  make_env.sh  requirements-1prod.yml  requirements-2dev.yml  test.sh
doc/design/: Makefile
doc/design/source/: conf.py  import_engine.rst  index.rst  (+5 more)
doc/reference/: Makefile
doc/source/: base_classes.rst  conf.py  data_model.rst  dimension_import.rst  examples.rst  fact_import.rst  index.rst  persistors.rst  plans.rst  queries.rst  query_engines.rst
lunch/app/: app.py
lunch/base_classes/: conductor.py  constant.py  owner_conductor.py  pure_conductor.py  stateful.py  transformer.py
lunch/errors/: edit_conflict_errors.py  validation_errors.py
lunch/examples/: inject_dimension_data.py  insert_dimension_data.py  insert_fact_data.py  save_dimension.py  save_fact.py  setup_managers.py
lunch/globals/: global_state.py
lunch/import_engine/: dimension_dataframe_merger.py  dimension_import_enactor.py  dimension_import_optimiser.py  dimension_import_plan.py  dimension_import_planner.py  fact_append_plan.py  fact_append_planner.py  fact_import_enactor.py  fact_import_optimiser.py  fact_import_plan.py  fact_import_planner.py
lunch/managers/: cube_data_manager.py  manager.py  model_conductor.py  model_manager.py  reference_data_manager.py  version_manager.py
lunch/mvcc/: version.py  versions_transformer.py
lunch/parser/: query_parser.py
lunch/query_engine/: optimiser.py
lunch/storage/: dimension_data_store.py  fact_data_store.py  model_store.py  reference_data_store.py  store.py  version_store.py
model/: dimensions.py
parser/: element_formula_parser.py
persistence/: persistor.py
(+267 files in other folders)
